--- a/src/csDesignF.html
+++ b/src/csDesignF.html
@@ -115,7 +115,7 @@
         </section>
 
         <section class="section gridcol gridpc">
-            <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
+            <a class="btn--ret__last" href="index.html#projects">Retour aux projets</a>
         </section>
         
     </main>
