--- a/src/csRux.html
+++ b/src/csRux.html
@@ -144,12 +144,12 @@
 
     <section id="section-8" class="section gridcol">
       <h2 class="title__cs title--col3">8. Problèmes rencontrés</h2>
-      <p class="p--col3col6"><span>Durant le projet, le groupe a dû faire face à plusieurs&nbsp;problématiques.</span> En effet, le local était rempli de carton. Ceci a rendu difficile les observations du local (nombres de prises électriques, éclairage suffisant...), et a aussi demandé du travail supplémentaire pour retoucher les photos. Par ailleurs, le local était souvent&nbsp;fermé.</p>
+      <p class="p--col3col7"><span>Durant le projet, le groupe a dû faire face à plusieurs&nbsp;problématiques.</span> En effet, le local était rempli de carton. Ceci a rendu difficile les observations du local (nombres de prises électriques, éclairage suffisant...), et a aussi demandé du travail supplémentaire pour retoucher les photos. Par ailleurs, le local était souvent&nbsp;fermé.</p>
     </section>
 
     <section id="section-9" class="section gridcol">
-      <h2 class="title__cs title--col3">9. Conclusion</h2>
-      <p class="p--conclusion">Ce projet a montré que la répartition des tâches (interne dans le groupe de 5 mais aussi avec les autres groupes) est un point primordial pour garantir une progression rapide et structurée. Les mises en commun avec les autres groupes sont aussi importantes car elles permettent de voir si tout le monde a bien la même compréhension des besoins des étudiants. Enfin, il est important de toujours garder en tête les besoins du "client" et d'anticiper le budget nécessaire à la réalisation du&nbsp;projet.</p>
+      <h2 class="title__cs title--col2">9. Conclusion</h2>
+      <p class="p--col2col6">Ce projet a montré que la répartition des tâches (interne dans le groupe de 5 mais aussi avec les autres groupes) est un point primordial pour garantir une progression rapide et structurée. Les mises en commun avec les autres groupes sont aussi importantes car elles permettent de voir si tout le monde a bien la même compréhension des besoins des étudiants. Enfin, il est important de toujours garder en tête les besoins du "client" et d'anticiper le budget nécessaire à la réalisation du&nbsp;projet.</p>
     </section>
 
     <section class="section gridcol gridpc">
@@ -158,7 +158,7 @@
 
     <section class="section gridcol gridpc">
       <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
-      <a class="btn--suiv" href="csDataplay.html">Case Study suivant</a>
+      <a class="btn--suiv" href="csDataplay.html">Case Study Dataplay</a>
     </section>
 
   </main>
