--- a/src/csDataplay.html
+++ b/src/csDataplay.html
@@ -121,7 +121,7 @@
 
     <section class="section gridcol gridpc">
       <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
-      <a class="btn--suiv" href="csDesignF.html">Case Study suivant</a>
+      <a class="btn--suiv" href="csDesignF.html">Case Study Design Fiction</a>
     </section>
 
   </main>
