modif html - css (!p--copy)

--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
   <header class="banniere gridcol">
     <div class="banniere__text">
       <h1 class="title title--big">Hello&nbsp;There</h1>
-      <p class="p--center__big">I'm Théo Colpaert, a belgian student in Web&nbsp;design</p>
+      <p class="p--center__big">I'm Théo Colpaert, a belgian student in Web&nbsp;Design</p>
     </div>
   </header>
 
@@ -69,7 +69,7 @@
       <h2 class="title title--center">My projects</h2>
       <div class="ligne-haut">
         <div class="div--prux">
-          <img src="assets/images/img_port/RuxImg.webp" srcset="assets/images/img_port/@2x/RuxImg@2x.webp 2x" alt="Image origanale en nuances de gris de la salle à réaménager. On voit que quelques tables et tables et chaises sont déjà présentes dans la salle.">
+          <img src="assets/images/img_port/RuxImg.webp" srcset="assets/images/img_port/@2x/RuxImg@2x.webp 2x" alt="Image originale en nuances de gris de la salle à réaménager. On voit que quelques tables et tables et chaises sont déjà présentes dans la salle.">
           <h3>Rethinking-UX Case Study</h3>
           <p class="p--presproj">This case study traces the progress of a school project aimed at redesigning the layout of a room to improve the student experience, fostering a more functional rest&nbsp;environment.</p>
           <a class="btn--plus" href="csRux.html">Read the case study</a>
