modif credits + back home

--- a/src/credits.html
+++ b/src/credits.html
@@ -22,7 +22,7 @@
   <link rel="icon" type="image/x-icon" href="https://theocolpaert.be/projets/tfa_2/assets/images/img_port/favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
     <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
@@ -98,8 +98,7 @@
       </div>
         </div>
 
-        <p class="p--copy">&#169;Théo Colpaert — 2025</p>
-        <a class="p--credits" href="index.html">Back home</a>
+    <p class="p--copy">&#169;Théo Colpaert — 2025&nbsp;<a class="p--credits_pc" href="index.html"><span class="tiret">—&nbsp;</span><span class="txt">Back home</span></a></p>
     </footer>
 </body>
 
