Légende carousel ok

--- a/src/designFiction.html
+++ b/src/designFiction.html
@@ -69,11 +69,15 @@
           </button>
 
           <div id="square" class="carre">
-            <img src="assets/images/img_df/faucon.webp" srcset="assets/images/img_df/@2x/faucon@2x.webp 2x" class="carousel-img active" alt="Vue 3D du drone dans son entièreté - Réalisé par mes soins avec Blender">
-            <img src="assets/images/img_df/cam_ois.webp" srcset="assets/images/img_df/@2x/cam_ois@2x.webp 2x" class="carousel-img" alt="Zoom sur le nez du drone, laissant apparaitre l'emplacement de la caméra - Réalisé par mes soins avec Blender">
-            <img src="assets/images/img_df/servo.webp" srcset="assets/images/img_df/@2x/servo@2x.webp 2x" class="carousel-img" alt="Un des servos moteur positionné dans le fuselage du drone - Réalisé par mes soins avec Blender">
-            <img src="assets/images/img_df/pcb.webp" srcset="assets/images/img_df/@2x/pcb@2x.webp 2x" class="carousel-img" alt="Carte électronique qui gère les systemes du drone - Image trouvée ici : https://wyolum.com/experimenting-pcb-rendering-using-kicad-freecad-and-blender/">
-            <img src="assets/images/img_df/battery.webp" srcset="assets/images/img_df/@2x/battery@2x.webp 2x" class="carousel-img" alt="Représentation 3D d'une batterie - Réalisé par mes soins avec Blender">
+            <img src="assets/images/img_df/faucon.webp" srcset="assets/images/img_df/@2x/faucon@2x.webp 2x" class="carousel-img active" alt="Vue 3D du drone dans son entièreté - Réalisé par mes soins avec Blender" data-caption="Vue 3D complète du drone"/>
+
+            <img src="assets/images/img_df/cam_ois.webp" srcset="assets/images/img_df/@2x/cam_ois@2x.webp 2x" class="carousel-img" alt="Zoom sur le nez du drone, laissant apparaitre l'emplacement de la caméra - Réalisé par mes soins avec Blender" data-caption="Nez du drone : emplacement caméra"/>
+
+            <img src="assets/images/img_df/servo.webp" srcset="assets/images/img_df/@2x/servo@2x.webp 2x" class="carousel-img" alt="Un des servos moteur positionné dans le fuselage du drone - Réalisé par mes soins avec Blender" data-caption="Servomoteur intégré au fuselage"/>
+
+            <img src="assets/images/img_df/pcb.webp" srcset="assets/images/img_df/@2x/pcb@2x.webp 2x" class="carousel-img" alt="Carte électronique qui gère les systemes du drone - Image trouvée ici : https://wyolum.com/experimenting-pcb-rendering-using-kicad-freecad-and-blender/" data-caption="Carte électronique (PCB) du drone"/>
+
+            <img src="assets/images/img_df/battery.webp" srcset="assets/images/img_df/@2x/battery@2x.webp 2x" class="carousel-img" alt="Représentation 3D d'une batterie - Réalisé par mes soins avec Blender" data-caption="Batterie du drone"/>
           </div>
 
           <button id="next">
