balise small copyright

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
       </div>
     </div>
     <a class="p--credits" href="credits.html">Credits</a>
-    <p class="p--copy">&#169;Théo Colpaert — 2025&nbsp;<a class="p--credits_pc" href="credits.html"><span class="tiret">—&nbsp;</span><span class="txt">Credits</span></a></p>
+    <small class="p--copy">&#169;Théo Colpaert — 2025&nbsp;<a class="p--credits_pc" href="credits.html"><span class="tiret">—&nbsp;</span><span class="txt">Credits</span></a></small>
 
   </footer>
 </body>
