--- a/src/csDataplay.html
+++ b/src/csDataplay.html
@@ -139,7 +139,7 @@
       </div>
     </div>
 
-    <p class="p--copy">&#169;Théo Colpaert — 2025</p>
+    <small class="p--copy">&#169;Théo Colpaert — 2025</small>
   </footer>
 
 </body>
