--- a/src/csDesignF.html
+++ b/src/csDesignF.html
@@ -134,7 +134,7 @@
     </div>
         </div>
 
-        <p class="p--copy">&#169;Théo Colpaert — 2025</p>
+    <small class="p--copy">&#169;Théo Colpaert — 2025</small>
     </footer>
 </body>
 
