modif taille video + footer df

--- a/src/designFiction.html
+++ b/src/designFiction.html
@@ -53,11 +53,10 @@
     
     <section class="section gridcol gridpc animate">
         <h2 class="title_tfa title--col2">Une mission…</h2>
-        <!-- <div id="container3D" style="display: block; width: 100%; height: 100%; position: relative;"></div> -->
         <p class="p p--col2col6__tfa"><span>En 2035, pour la première fois dans l’histoire, lors de la mission de recherche “SkyGuard” d’une personne disparue, des drones imitant des oiseaux ont étés déployés.</span> La zone de recherche étant vaste, il a fallu faire appel à des centaines de drones qui ont travaillé en essaim. Chaque drone communiquait simultanément ses données collectées et sa position aux autres drones et au centre de&nbsp;contrôle.</p>
         <p class="p p--col2col6__tfa"><span>Ces drones présentaient un avantage considérable : ils ne perturbaient pas la faune locale.</span> Grâce à leur système de propulsion biomimétique, basé sur le battement d’ailes, ils imitaient le vol des oiseaux avec une grande fidélité. Ce mode de déplacement, non seulement discret, mais aussi presque totalement silencieux une fois en vol, permettait de ne pas perturber la faune qu’ils&nbsp;survolaient.</p>
         <p class="p p--col2col6__tfa">Dans le cadre de cette intervention en zone vallonnée protégée, cette caractéristique était primordiale. En effet, cet espace abritait une biodiversité fragile, souvent sensible à la moindre intrusion humaine ou technologique. Il était donc essentiel, pour les équipes de secours mobilisées à la recherche de la personne disparue, de concilier efficacité opérationnelle et respect de l’environnement. <span>L’utilisation de ces drones innovants a ainsi permis de mener des recherches approfondies sans provoquer de stress ou de désorganisation au sein des écosystèmes&nbsp;locaux.</span></p>
-        <!-- <img class="img--falcon" src="assets/images/img_df/faucon.webp" srcset="assets/images/img_df/@2x/faucon@2x.webp 2x" alt="Rendu 3D d'un drone oiseau."> -->
+
     </section>
     <section class="section gridcol gridpc animate">
       <div class="carousel_tot">
@@ -104,10 +103,8 @@
     </section>
 
 <section class="section gridcol gridpc animate">
-  <!-- Titre -->
   <h2 class="title_tfa title--col1">La faiblesse d’un capteur...</h2>
 
-  <!-- Paragraphe explicatif -->
   <p class="p p--col1col5__capt">
     <span>Des ralentissements ont été constatés au cours de la mission.</span>
     Les capteurs thermiques embarqués sur les drones se sont révélés insuffisamment performants pour distinguer clairement l’empreinte thermique d’une biche de celle d’un être humain.
@@ -115,13 +112,11 @@
     Ces détours inutiles ont considérablement ralenti les opérations, entraînant une perte de temps précieuse dans un contexte où chaque minute&nbsp;comptait.
   </p>
 
-  <!-- Image principale -->
   <img
     class="img--capt"
     src="assets/images/img_df/img_th.webp" srcset="assets/images/img_df/@2x/img_th@2x.webp 2x" alt="Rendu 3D d'un capteur thermique que j'ai réalisé sur Blender."
   >
 
-  <!-- Zone interactive avec popups -->
   <div class="section--imgplus">
     <div class="container1">
       <div class="wrapper" style="top: 50px; left: 100px;">
@@ -150,7 +145,6 @@
     </div>
   </div>
 
-  <!-- Détail des composants (figure + figcaption) -->
   <div class="detail_cam">
     <figure>
       <img src="assets/images/img_df/cam_profile.webp" srcset="assets/images/img_df/@2x/cam_profile@2x.webp 2x" alt="Vue latérale du capteur">
@@ -192,9 +186,9 @@
 
 <footer class="gridcol foot__cs">
   <ul class="footer--liste__cs">
-    <li class="footer--el__cs">Projet Design Fiction</li>
-    <li class="footer--el__cs">&#169;Théo Colpaert — 2025</li>
-    <li class="footer--el__cs"><a class="btn--foot" href="index.html">Retour au Portfolio</a></li>
+    <li class="footer--el__cs">Projet&nbsp;Design&nbsp;Fiction</li>
+    <li class="footer--el__cs"><a class="btn--foot" href="index.html">Retour&nbsp;au&nbsp;Portfolio</a></li>
+    <li class="footer--el__cs"><small>&#169;Théo&nbsp;Colpaert&nbsp;—&nbsp;2025</small></li>
   </ul>
               
   <button class="backToTop__cs">
