--- a/src/pageTemoin.html
+++ b/src/pageTemoin.html
@@ -75,11 +75,11 @@
 </main>
 <footer class="gridcol foot__cs">
 
-    <ul class="footer--liste__cs">
-        <li class="footer--el__cs">Projet Design Fiction</li>
-        <li class="footer--el__cs">&#169;Théo Colpaert — 2025</li>
-        <li class="footer--el__cs"><a class="btn--foot" href="index.html">Retour au Portfolio</a></li>
-    </ul>
+  <ul class="footer--liste__cs">
+    <li class="footer--el__cs">Projet&nbsp;Design&nbsp;Fiction</li>
+    <li class="footer--el__cs"><a class="btn--foot" href="index.html">Retour&nbsp;au&nbsp;Portfolio</a></li>
+    <li class="footer--el__cs"><small>&#169;Théo&nbsp;Colpaert&nbsp;—&nbsp;2025</small></li>
+  </ul>
                
     <button class="backToTop__cs">
         <svg viewBox="0 0 24 24">
