modif nv btxn cs

--- a/src/csDesignF.html
+++ b/src/csDesignF.html
@@ -101,7 +101,6 @@
         <section id="section-5" class="section gridcol">
             <h2 class="title__cs title--col3">5. Les outils</h2>
             <p class="p--col3col8">Tout au long de ce projet, j’ai utilisé différents logiciels : <span>Photoshop</span> et <span>Illustrator</span> pour la création d’illustrations 2D, <span>Blender</span> pour les rendus 3D, et enfin <span>Figma</span> pour préparer la mise en page avant le développement.</p>
-             <!-- <img class="img--col6col1" src="assets/images/img_df_cs/boite_outil.webp" srcset="assets/images/img_df_cs/@2x/boite_outil@2x.webp 2x" alt="Rendu 3D d'une boite à outils (j'ai utilisé Blender) remplie des différents logos des logiciels que j'ai utilisé."> -->
         </section> 
 
 
@@ -116,7 +115,7 @@
 
         <section class="section gridcol gridpc">
             <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
-            <a class="btn--suiv" href="csRux.html">Case Study Rethinking-UX</a>
+            <a class="btn--suiv" href="csRux.html">Vers Case Study Rethinking-UX</a>
         </section>
         
     </main>
