--- a/src/csRux.html
+++ b/src/csRux.html
@@ -158,7 +158,7 @@
 
     <section class="section gridcol gridpc">
       <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
-      <a class="btn--suiv" href="csDataplay.html">Case Study Dataplay</a>
+      <a class="btn--suiv" href="csDataplay.html">Vers Case Study Dataplay</a>
     </section>
 
   </main>
