--- a/src/csDataplay.html
+++ b/src/csDataplay.html
@@ -21,6 +21,7 @@
 
   <link  rel="stylesheet" href="styles/app.css">
   <script src="scripts/app.js" defer></script>
+  <script src="https://unpkg.com/lucide@latest"></script>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -116,12 +117,15 @@
     </section>
 
     <section class="section gridcol gridpc">
-      <a class="btn--projet" href="https://theocolpaert.be/projets/dataplay/" target="_blank">Explorez le projet</a>
+      <a class="btn--projet" href="https://theocolpaert.be/projets/dataplay/" target="_blank">
+	    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-eye-icon lucide-eye"><path d="M2.062 12.348a1 1 0 0 1 0-.696 10.75 10.75 0 0 1 19.876 0 1 1 0 0 1 0 .696 10.75 10.75 0 0 1-19.876 0"></path><circle cx="12" cy="12" r="3"></circle></svg>Voir le projet</a>
     </section>
 
     <section class="section gridcol gridpc">
-      <a class="btn--ret" href="index.html#projects">Retour aux projets</a>
-      <a class="btn--suiv" href="csDesignF.html">Case Study Design Fiction</a>
+      <a class="btn--ret" href="index.html#projects">
+	    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-left-icon lucide-arrow-left"><path d="m12 19-7-7 7-7"/><path d="M19 12H5"/></svg>Retour aux projets</a>
+
+      <a class="btn--suiv" href="csDesignF.html">Vers "Case Study Design&nbsp;Fiction" <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-right-icon lucide-arrow-right"><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></svg></a>
     </section>
 
   </main>
