ajout alt img header + correction w3c

--- a/src/pageTemoin.html
+++ b/src/pageTemoin.html
@@ -37,7 +37,7 @@
               <h1 class="title title--big_tfa">Le&nbsp;témoignage</h1>
           </div>
           <div class="div--img_header">
-              <img class="img--header" src="assets/images/img_df/header_photo.webp" alt="">
+              <img class="img--header" src="assets/images/img_df/header_photo.webp" alt="Photo prise dans les Vosges pendant mes vacances. L'oiseau drone a été dessiné par mes soins.">
           </div>
       </section>
   </header>
