--- a/src/credits.html
+++ b/src/credits.html
@@ -80,7 +80,7 @@
         
         <section id="section-5" class="section gridcol gridpc">
             <h2 class="title__cs title--col1">5. Design Fiction</h2>
-            <p class="p p--col2col6">I used ChatGPT to help me add captions to the images in the carousel. In this carousel, I used a 3D rendering from the internet. You can find it on <a class="p--liencr" href="https://wyolum.com/experimenting-pcb-rendering-using-kicad-freecad-and-blender/" target="_blank">this website</a>. I also used ChatGPT to create the images for the witnesses portraits and manage interactions with the sound buttons on the “witnesses”&nbsp;page.</p>
+            <p class="p p--col2col6">I used ChatGPT to help me add captions to the images in the “carousel.” In this carousel, I used a 3D rendering from the internet. You can find it on <a class="p--liencr" href="https://wyolum.com/experimenting-pcb-rendering-using-kicad-freecad-and-blender/" target="_blank">this&nbsp;website</a>. I also used ChatGPT to create the images of the witnesses' portraits and manage interactions with the sound buttons on the “witnesses” page. The voices themselves were created on&nbsp;<a class="p--liencr" href="https://elevenlabs.io" target="_blank">"ElevenLabs.io"</a>.</p>
         </section>
 
     </main>
